test(phone-verification): fix config key for Twilio verify SID in failing test

--- a/.env.example
+++ b/.env.example
@@ -64,8 +64,11 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
-TWILIO_SID=
-TWILIO_AUTH_TOKEN=your_auth_token
-TWILIO_PHONE_NUMBER=+19787986036
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_PHONE_NUMBER=
+TWILIO_VERIFY_SERVICE_SID=
+#Change to true if you want to use the twilio phone number instead of the user's phone number
+TWILIO_USE_PHONE_NUMBER=false
 
 
