--- a/.env.testing
+++ b/.env.testing
@@ -69,5 +69,5 @@ TWILIO_PHONE_NUMBER=+19787986036
 TWILIO_SID="AC_TEST_SID"
 TWILIO_AUTH_TOKEN="TEST_AUTH_TOKEN"
 TWILIO_VERIFY_SERVICE_SID="VA_TEST_SID"
-
+TWILIO_USE_PHONE_NUMBER=false
 
